# rest-api-mysql

./: .env  Cargo.toml  README.md  docker-compose.yml
src/: handler.rs  main.rs  model.rs  schema.rs
